--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -61,6 +61,12 @@ input, textarea, select, button {
     color: #000958;
 }
 
+.heading-lv2 {
+    font-weight: 700;
+    font-size: 5.2rem;
+    line-height: 1.19;
+}
+
 .section-desc {
     font-weight: 400;
     font-size: 1.6rem;
@@ -111,7 +117,7 @@ input, textarea, select, button {
 /* ============Hero============= */
 
 .hero {
-    padding: 100px 0;
+    padding-top: 100px;
 }
 
 .hero .main-container {
@@ -122,6 +128,7 @@ input, textarea, select, button {
 .hero__media {
     position: relative;
     display: flex;
+    padding-bottom: 94px;
 }
 
 .hero__img-wrap {
@@ -175,8 +182,8 @@ input, textarea, select, button {
 
 .hero__list {
     position: absolute;
-    bottom: -94px;
     left: 129px;
+    bottom: 0;
     z-index: 2;
     width: 250px;
     height: 156px;
@@ -271,3 +278,425 @@ input, textarea, select, button {
     text-decoration: underline;
     color: #000958;
 }
+
+/* ============About============= */
+
+.about {
+    padding: 100px 0 185px;
+    margin-top: 107px;
+}
+
+.about__inner {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    row-gap: 146px;
+}
+
+/* About content 1 */
+
+.about__label {
+    font-family: 'Sora';
+    font-weight: 600;
+    font-size: 1.6rem;
+    line-height: 1;
+    color: #5E6085;
+}
+
+.about__desc, 
+.about__heading {
+    width: 444px;
+}
+
+.about__desc {
+    margin: 24px 0 54px;
+}
+
+.about__check-list {
+    display: grid;
+    gap: 34px 36px;
+    grid-template-columns: auto auto;
+    justify-content: flex-start;
+}
+
+.about__check-item {
+    position: relative;
+    display: flex;
+    align-items: center;
+    white-space: nowrap;
+    font-weight: 500;
+    font-size: 1.8rem;
+    line-height: 1;
+    color: #48496A;
+}
+
+.about__check-item::before {
+    display: inline-block;
+    content: '';
+    width: 24px;
+    height: 24px;
+    margin-right: 10px;
+    background: #FF5D31;
+    box-shadow: 0px 4px 15px -3px rgba(255, 93, 49, 0.69);
+    border-radius: 4px;
+}
+
+.about__check-item::after {
+    content: url(../icons/check-icon.svg);
+    position: absolute;
+    top: 3px;
+    left: 5px;
+}
+
+/* About media 1 */
+
+.about__media {
+    position: relative;
+    width: 494px;
+    height: 336px;
+    border-radius: 16px;
+    margin: 146px 0 0 108px;
+    background: linear-gradient(180deg, #FCE0EF 0%, #FAC3D1 100%);
+}
+
+.about__card {
+    position: relative;
+    width: 136px;
+    height: 156px;
+    padding: 31px 26px 29px;
+    margin: -58px 0 0 -92px;
+    text-align: center;
+    background: #5BD6E2;
+    box-shadow: -15px 26px 48px rgba(85, 240, 255, 0.17);
+    border-radius: 10px;
+}
+
+.about__card-title {
+    font-family: 'Sora';
+    font-weight: 700;
+    font-size: 4.2rem;
+    line-height: 1;
+    color: #FFFFFF;
+}
+
+.about__card-desc {
+    margin-top: 14px;
+    font-weight: 400;
+    font-size: 1.4rem;
+    line-height: 1.43;
+    color: #C6F4F9;
+}
+
+.about__card-decor {
+    position: absolute;
+    top: -39px;
+    right: -32px;
+}
+
+.about__media-image {
+    position: absolute;
+    right: 23px;
+    bottom: 0;
+    left: 21px;
+    display: inline-block;
+    width: 450px;
+    height: 551px;
+    object-fit: cover;
+}
+
+.about__media-decor {
+    position: absolute;
+    top: -66px;
+    right: -51px;
+    z-index: -1;
+}
+
+/* About media 2 */
+
+.about__media-bottom {
+    position: relative;
+    width: 458px;
+    height: 500px;
+    border: 2px solid #FFFFFF;
+    box-shadow: 0px 17px 77px -8px rgba(190, 165, 139, 0.17);
+    border-radius: 18px; 
+    background: linear-gradient(180deg, #C6E2FA 0%, #94C2EA 100%);
+}
+
+.about__img-wrap__bottom {
+    width: 458px;
+    height: 500px;
+}
+
+.about__media-image__bottom {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.about__media__decor-item {
+    position: absolute;
+}
+
+.about__media__decor-item:first-child {
+    top: 13px;
+    right: 63px;
+}
+
+.about__media__decor-item:nth-child(2) {
+    top: -16px;
+    right: 13px;
+}
+
+.about__media__decor-item:nth-child(3) {
+    top: 25px;
+    right: -21px;
+}
+
+.about__media__decor-item:nth-child(4) {
+    top: 336px;
+    right: 19px;
+}
+
+.about__media__decor-item:nth-child(5) {
+    top: 268px;
+    right: -33px;
+}
+
+.about__media__decor-item:nth-child(6) {
+    right: -23px;
+    bottom: -39px;
+} 
+
+.about__media__decor-item:nth-child(7) {
+    right: -33px;
+    bottom: -47px;
+}
+
+.about__media__decor-item:nth-child(8) {
+    right: -42px;
+    bottom: -54px;
+}
+
+/* About content 2 */
+
+.about__content-bottom {
+    margin: 36px 0 0 14px;
+}
+.about__content-bottom__desc, 
+.about__content-bottom__heading {
+    width: 515px;
+}
+
+.about__content-bottom__desc {
+    margin: 24px 0 51px;
+}
+
+.tab__list {
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.tab__list::after {
+    position: absolute;
+    bottom: -7px;
+    left: 0;
+    content: '';
+    width: 100%;
+    height: 2px;
+    border-bottom: 2px solid rgba(255, 91, 46, 0.07);
+    
+}
+
+.tab-item {
+    display: flex;
+    align-items: center;
+}
+
+.tab-item__title {
+    position: relative;
+    font-family: 'Sora';
+    font-weight: 600;
+    font-size: 1.8rem;
+    line-height: 1;
+    color: #48496A;
+}
+
+.tab-item__active::after {
+    position: absolute;
+    bottom: -7px;
+    content: '';
+    display: inline-block;
+    width: 95px;
+    border: 2px solid rgba(255, 91, 46, 1);
+}
+
+.tab__content {
+    display: none;
+}
+
+.tab-content__active {
+    display: block;
+}
+
+.tab__content__desc {
+    width: 391px;
+    font-size: 1.4rem;
+    line-height: 1.71;
+    margin: 50px 0 32px;
+}
+
+.tab__content__more {
+    position: relative;
+    font-weight: 500;
+    font-size: 1.6rem;
+    line-height: 1;
+    color: #FF5D31;
+}
+
+.tab__content__more::after {
+    display: inline-block;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    content: '';
+    width: 100%;
+    border: 1.5px solid #FF5D31;
+}
+
+.tab-item__icon-bag, 
+.tab-item__icon-pet-house, 
+.tab-item__icon-health-house {
+    display: inline-block;
+    object-fit: cover;
+    margin: -1px 10px 0 0;
+
+}
+
+.tab-item__icon-pet-house {
+    width: 18px;
+    height: 23px;
+}
+
+.tab-item__icon-health-house {
+    width: 18px;
+    height: 18px;
+}
+
+
+.tab-item__icon-bag {
+    width: 20px;
+    height: 20px;
+    margin-top: -4px;
+}
+
+/* ============Service============= */
+
+.service {
+    padding: 68px 0 100px;
+    background: rgba(255, 246, 237, 1);
+}
+
+.service__label {
+    font-family: 'Sora';
+    font-weight: 600;
+    font-size: 1.6rem;
+    line-height: 1;
+    text-align: center;
+    color: #5E6085;
+}
+
+.section-heading {
+    margin: 15px 0 71px;
+    text-align: center;
+}
+
+.service__body {
+    display: grid;
+    grid-template-columns: 1fr 1.4fr 1fr;
+    column-gap: 86px;
+}
+
+.service-item {
+    padding: 30px 22px 30px 28px;
+    margin-bottom: 24px;
+    background: #FFFFFF;
+    border: 2px solid rgba(255, 188, 122, 0.26);
+    border-radius: 10px;
+}
+
+.service-item__title {
+    display: flex;
+    align-items: center;
+    font-family: 'Sora';
+    font-weight: 600;
+    font-size: 2.2rem;
+    line-height: 1;
+    color: #000958;
+}
+
+.service-item__title::before {
+    display: inline-block;
+    content: '';
+    width: 22px;
+    height: 2px;
+    margin-left: -9px;
+    rotate: 90deg;
+    background: linear-gradient(rgba(255, 91, 46, 1), rgba(255, 161, 135, 1));
+}
+
+.service-item__desc {
+    margin: 18px 0 24px;
+    font-weight: 400;
+    font-size: 1.4rem;
+    line-height: 1.71;
+    color: #656689;
+}
+
+.service-item__link {
+    display: flex;
+    align-items: center;
+    gap: 6px;
+    font-family: 'Sora';
+    font-weight: 400;
+    font-size: 1.2rem;
+    line-height: 1;
+    color: #34396A;
+}
+
+.service__column__wrap-img {
+    position: relative;
+    top: 260px;
+    width: 410px;
+    height: 350px;
+    background: linear-gradient(180deg, #9DF1FB 0%, #73D0DB 108.14%);
+    border-radius: 10px;
+}
+
+.service__column-img {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    border-radius: inherit;
+    object-fit: cover;
+}
+
+.service__action {
+    display: flex;
+    justify-content: center;
+}
+
+.service__btn {
+    min-width: 214px;
+    border: 1px solid rgba(255, 91, 46, 0.6);
+    border-radius: 31px;
+    margin-top: 305px;
+    font-size: 1.6rem;
+    line-height: 1;
+    color: #FF5B2E;
+    box-shadow: 0px 13px 26px -8px rgba(255, 91, 46, 0.42);
+}
+
